# simple-linux-project-homework

./: Makefile.am  README.md  configure.ac  func.c  header.h  main.c
